@@ -705,14 +705,19 @@ Db.prototype.executeCommand = function(db_command, options, callback) {
  * Wrap a Mongo error document into an Error instance
  */
 Db.prototype.wrap = function(error) {
-    var e = new Error(error.err);
-    e.name = 'MongoError';
-    
-    for (var p in error) if (error.hasOwnProperty(p)) {
-        e[p] = error[p];
+  var e = new Error(error.err);
+  e.name = 'MongoError';
+
+  // Get all object keys
+  var keys = Object.keys(error);  
+  // Populate error object with properties
+  for(var i = 0; i < keys.length; i++) {
+    if(error.hasOwnProperty(keys[i])) {
+      e[keys[i]] = error[keys[i]];
     }
-    
-    return e;
+  }
+  
+  return e;
 }
 
 /**
